--- a/bp-templates/bp-legacy/css/buddypress-rtl.css
+++ b/bp-templates/bp-legacy/css/buddypress-rtl.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-Hello, this is the BuddyPress Legacy stylesheet.
+Hello, this is the BuddyBoss Legacy stylesheet.
 
 @version 3.0.0
 
