--- a/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -24,7 +24,7 @@
 //
 
 /*--------------------------------------------------------------
-Hello, this is the BuddyPress Nouveau stylesheet.
+Hello, this is the BuddyBoss Nouveau stylesheet.
 
 @version 3.0.0
 
