--- a/bp-templates/bp-nouveau/css/buddypress.css
+++ b/bp-templates/bp-nouveau/css/buddypress.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-Hello, this is the BuddyPress Nouveau stylesheet.
+Hello, this is the BuddyBoss Nouveau stylesheet.
 
 @version 3.0.0
 
