--- a/bp-templates/bp-legacy/css/twentyeleven.css
+++ b/bp-templates/bp-legacy/css/twentyeleven.css
@@ -45,7 +45,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 			6.2.1.2 - Group members list
 		6.2.2 - item-body: User Accounts
 			6.2.2.1 - classes, pag, filters
-			6.2.2.2 - Extended Profiles
+			6.2.2.2 - Profile Fields
 			6.2.2.3 - Groups
 			6.2.2.4 - friends
 			6.2.2.5 - Private Messaging Threads
@@ -1341,7 +1341,7 @@ body.buddypress:not(.page-template-sidebar-page) #content .entry-content {
 
 /**
 	*-------------------------------------------
-	* @subsection 6.2.2.2 - Extended Profiles
+	* @subsection 6.2.2.2 - Profile Fields
 	*-------------------------------------------
 	*/
 .bp-user #buddypress .profile .bp-widget h2 {
