--- a/bp-templates/bp-legacy/css/twentyfifteen.scss
+++ b/bp-templates/bp-legacy/css/twentyfifteen.scss
@@ -181,7 +181,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 			6.2.1.3 - Group Send Invites
 		6.2.2 - item-body: User Accounts
 			6.2.2.1 - classes, pag, filters
-			6.2.2.2 - Extended Profiles
+			6.2.2.2 - Profile Fields
 			6.2.2.3 - Groups
 			6.2.2.4 - friends
 			6.2.2.5 - Private Messaging Threads
@@ -1831,7 +1831,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 
 /**
 	*-------------------------------------------
-	* @subsection 6.2.2.2 - Extended Profiles
+	* @subsection 6.2.2.2 - Profile Fields
 	*-------------------------------------------
 	*/
 
