--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -34,7 +34,7 @@ Hello, this is the BuddyPress Default theme stylesheet.
 	6.7 - Topics and Tables - Forums and General
 	6.8 - Headers, Lists and Tabs - Activity, Groups, Blogs, Forums
 	6.9 - Private Messaging Threads
-	6.10 - Extended Profiles
+	6.10 - Profile Fields
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
@@ -2392,7 +2392,7 @@ div.message-search {
 }
 
 /*--------------------------------------------------------------
-6.9 - Extended Profiles
+6.9 - Profile Fields
 --------------------------------------------------------------*/
 
 div.profile h4 {
