Extended Profiles => Profile Fields

--- a/bp-templates/bp-legacy/css/twentyeleven.scss
+++ b/bp-templates/bp-legacy/css/twentyeleven.scss
@@ -262,7 +262,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 			6.2.1.2 - Group members list
 		6.2.2 - item-body: User Accounts
 			6.2.2.1 - classes, pag, filters
-			6.2.2.2 - Extended Profiles
+			6.2.2.2 - Profiles Fields
 			6.2.2.3 - Groups
 			6.2.2.4 - friends
 			6.2.2.5 - Private Messaging Threads
@@ -1987,7 +1987,7 @@ body.buddypress:not(.page-template-sidebar-page) {
 
 /**
 	*-------------------------------------------
-	* @subsection 6.2.2.2 - Extended Profiles
+	* @subsection 6.2.2.2 - Profiles Fields
 	*-------------------------------------------
 	*/
 
