--- a/bp-templates/bp-legacy/css/twentyfourteen.scss
+++ b/bp-templates/bp-legacy/css/twentyfourteen.scss
@@ -185,7 +185,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 			6.2.1.3 - Group Send Invites
 		6.2.2 - item-body: User Accounts
 			6.2.2.1 - classes, pag, filters
-			6.2.2.2 - Extended Profiles
+			6.2.2.2 - Profiles Fields
 			6.2.2.3 - Groups
 			6.2.2.4 - friends
 			6.2.2.5 - Private Messaging Threads
@@ -1477,7 +1477,7 @@ body.activity-permalink {
 
 /**
 	*------------------------------
-	* 6.2.2.2 - Extended Profiles
+	* 6.2.2.2 - Profiles Fields
 	*------------------------------
 	*/
 
