--- a/bp-templates/bp-legacy/css/twentyten.css
+++ b/bp-templates/bp-legacy/css/twentyten.css
@@ -45,7 +45,7 @@ http://codex.buddypress.org/themes/buddypress-companion-stylesheets/
 			6.2.1.2 - Group members list
 		6.2.2 - item-body: User Accounts
 			6.2.2.1 - classes, pag, filters
-			6.2.2.2 - Extended Profiles
+			6.2.2.2 - Profiles Fields
 			6.2.2.3 - Groups
 			6.2.2.4 - friends
 			6.2.2.5 - Private Messaging Threads
@@ -1276,7 +1276,7 @@ body.page-template-onecolumn-page #content .entry-content {
 
 /**
 	*-------------------------------------------
-	* @subsection 6.2.2.2 - Extended Profiles
+	* @subsection 6.2.2.2 - Profiles Fields
 	*-------------------------------------------
 	*/
 .bp-user #buddypress .profile .bp-widget h2 {
