--- a/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -35,7 +35,7 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 			5.2.1.4 - Group Activity
 		5.2.2 - item-body: User Accounts
 			5.2.2.1 - classes, pag, filters
-			5.2.2.2 - Extended Profiles
+			5.2.2.2 - Profiles Fields
 			5.2.2.3 - Groups
 			5.2.2.4 - friends
 			5.2.2.5 - Private Messaging Threads
@@ -2704,7 +2704,7 @@ body.no-js .single-item-header .js-self-profile-button {
 */
 /**
 *-------------------------------------------
-* @subsection 5.2.2.2 - Extended Profiles
+* @subsection 5.2.2.2 - Profiles Fields
 *-------------------------------------------
 */
 .buddypress-wrap .profile {
