--- a/bp-templates/bp-legacy/css/buddypress-rtl.css
+++ b/bp-templates/bp-legacy/css/buddypress-rtl.css
@@ -1762,7 +1762,7 @@ body.activity-permalink #buddypress ul.item-list li.activity-item {
 }
 
 #buddypress #header-cover-image {
-	background-color: #c5c5c5;
+	background-color: #b9babe;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
