--- a/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -12,7 +12,7 @@
 }
 
 #header-cover-image {
-	background-color: #c5c5c5;
+	background-color: #b9babe;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
