--- a/bp-templates/bp-nouveau/css/buddypress.css
+++ b/bp-templates/bp-nouveau/css/buddypress.css
@@ -2209,7 +2209,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 #header-cover-image {
-	background-color: #c5c5c5;
+	background-color: #b9babe;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
