--- a/bp-core/admin/css/common-rtl.css
+++ b/bp-core/admin/css/common-rtl.css
@@ -133,7 +133,7 @@ TABLE OF CONTENTS:
 .bp-about-wrap .wp-person .gravatar {
 	float: right;
 	margin: 0 0 10px 10px;
-	padding: 1px;
+	border: 1px solid #ccc;
 	width: 60px;
 	height: 60px;
 }
