--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2213,7 +2213,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 #header-cover-image {
-	background-color: #b9babe;
+	background-color: #23282d;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
