--- a/src/bp-templates/bp-legacy/css/buddypress.css
+++ b/src/bp-templates/bp-legacy/css/buddypress.css
@@ -1762,7 +1762,7 @@ body.activity-permalink #buddypress ul.item-list li.activity-item {
 }
 
 #buddypress #header-cover-image {
-	background-color: #b9babe;
+	background-color: #23282d;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
