--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -12,7 +12,7 @@
 }
 
 #header-cover-image {
-	background-color: #23282d;
+	background-color: #555;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: cover;
