--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3003,7 +3003,7 @@ body.register .buddypress-wrap .page ul {
 
 #message-threads li .thread-avatar img.avatar {
 	float: left;
-	margin: 0 10px 0 0;
+	margin: 5px 10px 0 0;
 }
 
 #message-threads li .thread-from .user-name,
