--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3092,25 +3092,6 @@ body.register .buddypress-wrap .page ul {
 	font-size: 26px;
 }
 
-.bp-messages-content #thread-preview {
-	border: 1px solid #eaeaea;
-	margin-top: 20px;
-}
-
-.bp-messages-content #thread-preview .preview-message {
-	overflow: hidden;
-}
-
-.bp-messages-content #thread-preview .preview-content {
-	margin: 0.5em;
-}
-
-.bp-messages-content #thread-preview .preview-content .preview-message {
-	background: #fafafa;
-	margin: 10px 0;
-	padding: 1em 0.3em 0.3em;
-}
-
 .bp-messages-content #bp-message-thread-list {
 	background: #fafafa;
 	clear: both;
@@ -3243,9 +3224,6 @@ body.register .buddypress-wrap .page ul {
 	width: 30px;
 }
 
-.bp-messages-content #thread-preview .preview-message ul,
-.bp-messages-content #thread-preview .preview-message ol,
-.bp-messages-content #thread-preview .preview-message blockquote,
 .bp-messages-content #bp-message-thread-list li .message-content ul,
 .bp-messages-content #bp-message-thread-list li .message-content ol,
 .bp-messages-content #bp-message-thread-list li .message-content blockquote {
@@ -3253,12 +3231,10 @@ body.register .buddypress-wrap .page ul {
 	margin-left: 0;
 }
 
-.bp-messages-content ul#message-threads:empty,
-.bp-messages-content #thread-preview:empty {
+.bp-messages-content ul#message-threads:empty {
 	display: none;
 }
 
-.bp-messages-content #thread-preview h2:first-child,
 .bp-messages-content #bp-message-thread-header h2:first-child {
 	background-color: #eaeaea;
 	color: #555;
