--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1357,9 +1357,9 @@ body.buddypress article.page > .entry-header .entry-title {
     white-space: nowrap;
     width: 1em;
 }
-.activity-list .activity-item .activity-header .activity-to:before  { 
-    font-family: 'dashicons'; 
-    vertical-align: middle; 
+.activity-list .activity-item .activity-header .activity-to:before  {
+    font-family: 'dashicons';
+    vertical-align: middle;
     content: '\f344';
     visibility: visible;
 }
@@ -2964,6 +2964,15 @@ body.register .buddypress-wrap .page ul {
 
 .bp-messages-content .thread-participants dd {
 	margin-left: 0;
+}
+
+.bp-messages-content .thread-participants span:after {
+	content: ", ";
+	margin-right: 5px;
+}
+
+.bp-messages-content .thread-participants span:last-child:after {
+	content: none;
 }
 
 .bp-messages-content time {
