Fix bug with message not loading

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -3049,7 +3049,7 @@ body.register .buddypress-wrap .page ul {
 	background-color: #fafafa;
 }
 
-#message-threads li.unread .thread-to .recipient {
+#message-threads li.unread .thread-to .subject {
 	color: #5087e5;
 }
 
