Register page, cleaner layout

--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1972,14 +1972,24 @@ form.ac-form .ac-reply-content input {
 * @section 4.0 - Directories
 *-------------------------------------------------------------------------------
 */
+
+body.register #page #primary .entry-header {
+	text-align: center;
+}
+
+@media screen and (min-width: 55em) {
+	body.register #page #primary .entry-header,
+	body.register .buddypress-wrap {
+		max-width: 460px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
 .register-page .register-section {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
-
-.register-page .signup-form {
-	margin-top: 20px;
 }
 
 .register-page .signup-form .default-profile input {
@@ -2022,37 +2032,8 @@ form.ac-form .ac-reply-content input {
 	border: 1px solid #eee;
 }
 
-@media screen and (min-width: 46.8em) {
-	.buddypress-wrap .register-page .layout-wrap {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: space-around;
-	}
-	.buddypress-wrap .register-page .layout-wrap .default-profile {
-		flex: 1;
-		padding-right: 2em;
-	}
-	.buddypress-wrap .register-page .layout-wrap .blog-details {
-		flex: 1;
-		padding-left: 2em;
-	}
-	.buddypress-wrap .register-page .submit {
-		clear: both;
-	}
-}
-
-@media screen and (min-width: 46.8em) {
-	.buddypress-wrap.extended-default-reg .register-page .default-profile {
-		flex: 1;
-		padding-right: 1em;
-	}
-	.buddypress-wrap.extended-default-reg .register-page .extended-profile {
-		flex: 2;
-		padding-left: 1em;
-	}
-	.buddypress-wrap.extended-default-reg .register-page .blog-details {
-		flex: 1 100%;
-	}
+.buddypress-wrap .register-page .submit {
+	clear: both;
 }
 
 /**
@@ -2859,7 +2840,6 @@ body.no-js .buddypress-wrap .field-visibility-settings {
 }
 
 .buddypress-wrap .standard-form .description {
-	background: #fafafa;
 	font-size: inherit;
 }
 
@@ -3353,7 +3333,6 @@ div.bp-navs#subsubnav.bp-messages-filters .user-messages-bulk-actions {
 .buddypress-wrap .standard-form textarea[required],
 .buddypress-wrap .standard-form select[required] {
 	box-shadow: none;
-	border-width: 2px;
 	outline: 0;
 }
 
@@ -3372,7 +3351,7 @@ div.bp-navs#subsubnav.bp-messages-filters .user-messages-bulk-actions {
 .buddypress-wrap .standard-form input[required]:focus,
 .buddypress-wrap .standard-form textarea[required]:focus,
 .buddypress-wrap .standard-form select[required]:focus {
-	border-color: #d6d6d6;
+	border-color: #0b80a4;
 	border-width: 1px;
 }
 
