--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -124,14 +124,14 @@ body.buddypress .buddypress-wrap h6 {
 	border-radius: 50%;
 }
 
-div,
-dl,
-li,
-textarea,
-select,
-input[type="search"],
-input[type="submit"],
-input[type="reset"] {
+#buddypress div,
+#buddypress dl,
+#buddypress li,
+#buddypress textarea,
+#buddypress select,
+#buddypress input[type="search"],
+#buddypress input[type="submit"],
+#buddypress input[type="reset"] {
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	-ms-border-radius: 2px;
