Moved css codes to Scss

--- a/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
@@ -43,7 +43,7 @@ $bp-border-dark:       $primary-grey !default;
 $buttons-background:   #ededed !default;
 $off-white:            #fafafa !default;
 $white:                #fff !default;
-$form-border-color:    $med-light-grey !default;
+$form-border-color:    #0b80a4 !default;
 $bp-text:              $dark-grey !default;
 $form-text:            $light-text-plus !default;
 $primary-headings:     $light-text !default;
