--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -10,19 +10,19 @@
 
 .buddypress-wrap {
 
-	.profile {
-		margin-top: $marg-xlrg;
-	}
+    .profile {
+        margin-top: $marg-xlrg;
+    }
 
-	.public {
+    .public {
 
-		.profile-fields {
+        .profile-fields {
 
-			td.label {
-				width: 30%;
-			}
-		}
-	}
+            td.label {
+                width: 30%;
+            }
+        }
+    }
 
 }
 
@@ -30,181 +30,180 @@
 
 .buddypress-wrap {
 
-	.profile.edit {
+    .profile.edit {
 
-		// The groups tabs
-		.button-nav {
-			list-style: none;
-			margin: $marg-xlrg 0 $marg-sml;
+        // The groups tabs
+        .button-nav {
+            list-style: none;
+            margin: $marg-xlrg 0 $marg-sml;
 
-			li {
-				display: inline-block;
-				margin-right: $marg-sml;
+            li {
+                display: inline-block;
+                margin-right: $marg-sml;
 
-				a {
+                a {
 
-					@include font-size(18);
-				}
-			}
-		}
+                    @include font-size(18);
+                }
+            }
+        }
 
-		.editfield {
-			background: $off-white;
-			border: 1px solid $bp-border-color;
-			margin: $marg-med 0;
-			padding: $pad-med;
+        .editfield {
+            background: $off-white;
+            border: 1px solid $bp-border-color;
+            margin: $marg-med 0;
+            padding: $pad-med;
 
-			fieldset {
-				border: 0;
+            fieldset {
+                border: 0;
 
-				label {
-					font-weight: 400;
+                label {
+                    font-weight: 400;
 
-					&.xprofile-field-label {
-						display: inline;
-					}
-				}
-			}
-		}
+                    &.xprofile-field-label {
+                        display: inline;
+                    }
+                }
+            }
+        }
 
-		// The visual layout of the form controls and group description
-		.editfield {
-			display: flex;
-			flex-direction: column;
+        // The visual layout of the form controls and group description
+        .editfield {
+            display: flex;
+            flex-direction: column;
 
-			.description {
-				margin-top: $marg-sml;
-				order: 2;
-			}
+            .description {
+                margin-top: $marg-sml;
+                order: 2;
+            }
 
-			> fieldset {
-				order: 1;
-			}
+            > fieldset {
+                order: 1;
+            }
 
-			.field-visibility-settings-toggle,
-			.field-visibility-settings {
-				order: 3;
-			}
-		}
+            .field-visibility-settings-toggle,
+            .field-visibility-settings {
+                order: 3;
+            }
+        }
 
-	} // .profile
+    } // .profile
 } // close .buddypress-wrap
 
 body.no-js {
 
-	.buddypress-wrap .field-visibility-settings-toggle,
-	.buddypress-wrap .field-visibility-settings-close {
-		display: none;
-	}
+    .buddypress-wrap .field-visibility-settings-toggle,
+    .buddypress-wrap .field-visibility-settings-close {
+        display: none;
+    }
 
-	.buddypress-wrap .field-visibility-settings {
-		display: block;
-	}
+    .buddypress-wrap .field-visibility-settings {
+        display: block;
+    }
 }
 
 .buddypress-wrap {
 
-	.field-visibility-settings {
-		margin: $marg-sml 0;
-	}
+    .field-visibility-settings {
+        margin: $marg-sml 0;
+    }
 
-	.current-visibility-level {
-		font-style: normal;
-		font-weight: 700;
-	}
+    .current-visibility-level {
+        font-style: normal;
+        color: #333;
+    }
 
-	.field-visibility-settings,
-	.field-visibility-settings-header {
-		color: $light-text-plus;
-	}
+    .field-visibility-settings,
+    .field-visibility-settings-header {
+        color: $light-text-plus;
+    }
 
-	.field-visibility-settings {
+    .field-visibility-settings {
 
-		fieldset {
-			margin: $marg-xsml 0;
-		}
-	}
+        fieldset {
+            margin: $marg-xsml 0;
+        }
+    }
 
-	.standard-form { // this needs to be a specific profile edit form class
+    .standard-form { // this needs to be a specific profile edit form class
 
-		.editfield {
+                     .editfield {
 
-			fieldset {
-				margin: 0;
-			}
-		}
+                         fieldset {
+                             margin: 0;
+                         }
+                     }
 
-		.field-visibility-settings {
+                     .field-visibility-settings {
 
-			label {
-				font-weight: 400;
-				margin: 0;
-			}
+                         label {
+                             font-weight: 400;
+                             margin: 0;
+                         }
 
-			.radio {
-				list-style: none;
-				margin-bottom: 0;
-			}
+                         .radio {
+                             list-style: none;
+                             margin-bottom: 0;
+                         }
 
-			.field-visibility-settings-close {
+                         .field-visibility-settings-close {
+                             @include font-size(12);
+                         }
+                     }
 
-				@include font-size(12);
-			}
-		}
+                     .wp-editor-container {
+                         border: 1px solid #dedede;
 
-		.wp-editor-container {
-			border: 1px solid #dedede;
+                         textarea {
+                             background: $white;
+                             width: 100%;
+                         }
+                     }
 
-			textarea {
-				background: $white;
-				width: 100%;
-			}
-		}
+                     // field item description
+                     .description {
+                         //background: $off-white;
+                         font-size: inherit;
+                     }
 
-		// field item description
-		.description {
-			background: $off-white;
-			font-size: inherit;
-		}
+                     .field-visibility-settings legend,
+                     .field-visibility-settings-header {
+                         font-style: italic;
+                     }
 
-		.field-visibility-settings legend,
-		.field-visibility-settings-header {
-			font-style: italic;
-		}
+                     .field-visibility-settings-header {
+                         @include font-size(14);
+                         margin: 5px 0;
+                     }
 
-		.field-visibility-settings-header {
+                     .field-visibility-settings {
 
-			@include font-size(14);
-		}
+                         legend,
+                         label {
 
-		.field-visibility-settings {
+                             @include font-size(14);
+                         }
+                     }
 
-			legend,
-			label {
+                     .field-visibility select {
+                         margin: 0;
+                     }
 
-				@include font-size(14);
-			}
-		}
+    } // close .standard-form
 
-		.field-visibility select {
-			margin: 0;
-		}
+    .html-active button.switch-html {
+        background: #f5f5f5;
+        border-bottom-color: transparent;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
 
-	} // close .standard-form
-
-	.html-active button.switch-html {
-		background: #f5f5f5;
-		border-bottom-color: transparent;
-		border-bottom-left-radius: 0;
-		border-bottom-right-radius: 0;
-	}
-
-	.tmce-active button.switch-tmce {
-		background: #f5f5f5;
-		border-bottom-color: transparent;
-		border-bottom-left-radius: 0;
-		border-bottom-right-radius: 0;
-	}
+    .tmce-active button.switch-tmce {
+        background: #f5f5f5;
+        border-bottom-color: transparent;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
 
 } // close .buddypress-wrap
 
@@ -212,27 +211,27 @@ body.no-js {
 
 .buddypress-wrap {
 
-	.profile.public {
+    .profile.public {
 
-		.profile-group-title {
-			border-bottom: 1px solid $bp-border-dark;
-		}
-	}
+        .profile-group-title {
+            border-bottom: 1px solid $bp-border-dark;
+        }
+    }
 }
 
 // This needs to be reviewed and re-located!?
 body.register .buddypress-wrap .page ul {
-	list-style: none;
+    list-style: none;
 }
 
 // Avatars & Cover Image
 
 .buddypress-wrap {
 
-	.profile {
+    .profile {
 
-		.bp-avatar-nav {
-			margin-top: $marg-lrg;
-		}
-	}
+        .bp-avatar-nav {
+            margin-top: $marg-lrg;
+        }
+    }
 }
