--- a/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
+++ b/src/bp-templates/bp-nouveau/sass/_nouveau_messages.scss
@@ -2,398 +2,402 @@
 // @version 3.0.0
 // Icon additions to default action star
 
-
 .message-action-star:before,
 .message-action-unstar:before,
 .message-action-view:before,
 .message-action-delete:before {
-	font-family: dashicons;
-	font-size: 18px;
+    font-family: dashicons;
+    font-size: 18px;
 }
 
 .message-action-star:before {
-	color: #aaa;
-	content: "\f154";
+    color: #aaa;
+    content: "\f154";
 }
 
 .message-action-unstar:before {
-	color: #fcdd77;
-	content: "\f155";
+    color: #fcdd77;
+    content: "\f155";
 }
 
 .message-action-view:before {
-	content: "\f473";
+    content: "\f473";
 }
 
 .message-action-delete:before {
-	content: "\f182";
+    content: "\f182";
 }
 
 .message-action-delete:hover:before {
-	color: #a00;
+    color: #a00;
 }
 
 .preview-content {
 
-	.actions {
+    .actions {
 
-		a {
-			text-decoration: none;
-		}
-	}
+        a {
+            text-decoration: none;
+        }
+    }
 }
 
 // Visual message threads & preview pane styles
 
 .bp-messages-content {
-	margin: $marg-med 0;
+    margin: $marg-med 0;
 
-	.avatar {
+    .avatar {
 
-		@include box-shadow-none();
-	}
+        @include box-shadow-none();
+    }
 
-	.thread-participants {
-		list-style: none;
+    .thread-participants {
+        list-style: none;
 
-		dd {
-			margin-left: 0;
-		}
-	}
+        dd {
+            margin-left: 0;
+        }
+    }
 
-	time {
-		color: $meta-text;
+    time {
+        color: $meta-text;
 
-		@include font-size(12);
-	}
+        @include font-size(12);
+    }
 }
 
 // The actual messages list
 #message-threads {
-	border-top: 1px solid $light-grey;
-	clear: both;
-	list-style: none;
-	margin: 0;
-	max-height: 220px;
-	overflow-x: hidden;
-	overflow-y: auto;
-	padding: 0;
-	width: 100%;
+    border-top: 1px solid $light-grey;
+    clear: both;
+    list-style: none;
+    margin: 0;
+    //max-height: 220px;
+    //overflow-x: hidden;
+    //overflow-y: auto;
+    padding: 0;
+    width: 100%;
 
-	// The primary list elements
-	li {
-		border-bottom: 1px solid $light-grey;
+    // The primary list elements
+    li {
+        border-bottom: 1px solid $light-grey;
 
-		@include flex-box-dir();
-		margin: 0;
-		overflow: hidden;
-		padding: $pad-sml 0;
+        @include flex-box-dir();
+        margin: 0;
+        overflow: hidden;
+        padding: $pad-sml;
 
-		// the child items
-		.thread-cb {
+        // the child items
+        .thread-cb {
 
-			@include center-vert();
-			@include box-item-size(1, 2, 5%);
-		}
+            @include center-vert();
+            @include box-item-size(1, 2, 5%);
+        }
 
-		.thread-to {
+        //.thread-from,
+        .thread-to {
 
-			@include box-item-size(1, 2, 20%);
+            @include box-item-size(1, 2, 10%);
 
-			img.avatar {
-				float: left;
-				margin: 0 $marg-sml 0 0;
-			}
+            img.avatar {
+                float: left;
+                margin: 5px $marg-sml 0 0;
+            }
 
-			.user-name {
-				display: inline-block;
-				line-height: 1.1;
-			}
+            .user-name {
+                display: inline-block;
+                line-height: 1.1;
+            }
 
-			.num-recipients {
-				color: $meta-text;
-				font-weight: 400;
+            .num-recipients {
+                color: $meta-text;
+                font-weight: 400;
 
-				@include font-size(12);
-				margin: 0;
-			}
-		}
+                @include font-size(12);
+                margin: 0;
+            }
+        }
 
-		.thread-content {
+        .thread-content {
 
-			@include box-item-size(1, 2, 60%);
-		}
+            @include box-item-size(1, 2, 50%);
+        }
 
-		.thread-date {
+        .thread-date {
 
-			@include box-item-size(1, 2, 15%);
-		}
+            @include box-item-size(1, 2, 15%);
+        }
 
-		// the selected parent li elements & message details
-		&.selected {
-			background-color: $off-white;
+        // the selected parent li elements & message details
+        &.selected {
+            //background-color: $off-white;
 
-			.thread-subject {
+            //.thread-subject {
 
-				.subject {
-					color: $blue;
-				}
-			}
-		}
+            //.subject {
+            //color: $blue;
+            //}
+            //}
+        }
 
-		// the unread parent li
-		&.unread {
-			font-weight: 700;
-		}
+        // the unread parent li
+        &.unread {
+            background-color: $off-white;
 
-		.thread-content {
+            .thread-subject {
 
-			.excerpt {
-				color: $meta-text;
+                .subject {
+                    color: $blue;
+                }
+            }
+        }
 
-				@include font-size(12);
-				margin: 0;
-			}
+        .thread-content {
 
-			.thread-from,
-			.thread-to,
-			.thread-subject {
+            .excerpt {
+                color: $meta-text;
 
-				@include responsive-font(16);
-			}
+                @include font-size(12);
+                margin: 0;
+            }
 
-			.thread-subject {
-				vertical-align: top;
+            .thread-from,
+            .thread-to {
 
-				.excerpt {
-					font-weight: 400;
-				}
+                @include responsive-font(16);
+            }
 
-			}
-		} // close thread-content
+            .thread-subject {
+                vertical-align: top;
 
-		.thread-date {
-			padding-right: 5px;
-			text-align: right;
-		}
+                .excerpt {
+                    font-weight: 400;
+                }
 
-	} // close li
+            }
+        } // close thread-content
+
+        .thread-date {
+            padding-right: 5px;
+            text-align: right;
+        }
+
+    } // close li
 
 } // close message-threads
 
 .bp-messages-content {
 
-	.actions {
-		float: right;
-		max-width: 30%;
+    .actions {
+        float: right;
+        max-width: 30%;
 
-		.bp-icons:not(.bp-hide) {
-			display: inline-block;
-			margin: 0;
-			padding: $pad-xsml $pad-sml;
+        .bp-icons:not(.bp-hide) {
+            display: inline-block;
+            margin: 0;
+            padding: $pad-xsml $pad-sml;
 
-			&:before {
+            &:before {
 
-				@include font-size(26);
-			}
-		}
-	}
+                @include font-size(26);
+            }
+        }
+    }
 
-	// preview pane on main inbox view all message entries
-	#thread-preview {
-		border: 1px solid $light-grey;
-		margin-top: $marg-lrg;
+    // preview pane on main inbox view all message entries
+    #thread-preview {
+        //border: 1px solid $light-grey;
+        //margin-top: $marg-lrg;
 
-		.preview-message {
-			overflow: hidden;
-		}
+        .preview-message {
+            //overflow: hidden;
+        }
 
-		.preview-content {
-			margin: 0.5em;
+        .preview-content {
+            //margin: 0.5em;
 
-			.preview-message {
-				background: $off-white;
-				margin: $marg-sml 0;
-				padding: $pad-med $pad-xsml $pad-xsml;
-			}
+            .preview-message {
+                //background: $off-white;
+                //margin: $marg-sml 0;
+                //padding: $pad-med $pad-xsml $pad-xsml;
+            }
 
-		} // close .preview-content
+        } // close .preview-content
 
-	} // close .thread-preview
+    } // close .thread-preview
 
-	// The single view of messages in a conversation thread
-	#bp-message-thread-list {
-		border-top: 1px solid $light-grey;
-		clear: both;
-		list-style: none;
-		padding: $pad-med 0 $pad-xsml;
+    // The single view of messages in a conversation thread
+    #bp-message-thread-list {
+        background: #fafafa;
+        border-top: 1px solid $light-grey;
+        clear: both;
+        list-style: none;
+        padding: 0 $pad-med;
 
-		li {
-			padding: $pad-sml;
-		}
+        li {
+            background: $white;
+            border: 1px solid $bp-border-dark;
+            @include box-shadow(-2px 1px 9px 0 #eee);
+            padding: $pad-sml;
+            margin: $mar-med 0;
+            width: 100%;
+        }
 
-		li:nth-child(2n) {
+        li:nth-child(2n) {
 
-			.message-content {
-				background: $off-white;
-			}
-		}
+            .message-content {
+                //background: $off-white;
+            }
+        }
 
-		.message-metadata {
-			border-bottom: 1px solid $bp-border-dark;
+        .message-metadata {
 
-			@include box-shadow(-2px 1px 9px 0 #eee);
-			display: table;
-			padding: 0.2em;
-			width: 100%;
 
-			.avatar {
-				width: 30px;
-			}
+            .avatar {
+                width: 30px;
+            }
 
-			.user-link {
-				display: block;
+            .user-link {
+                display: block;
 
-				@include responsive-font(16);
-				float: left;
-			}
+                @include responsive-font(16);
+                float: left;
+            }
 
-			time {
-				color: $meta-text;
+            time {
+                color: $meta-text;
 
-				@include font-size(12);
-				padding: 0 $pad-sml;
-			}
+                @include font-size(12);
+                padding: 0 $pad-sml;
+            }
 
-			button {
-				padding: 0 $pad-xsml;
-			}
+            button {
+                padding: 0 $pad-xsml;
+            }
 
-			button:before {
+            button:before {
 
-				@include font-size(20);
-			}
-		}
+                @include font-size(20);
+            }
+        }
 
-		.message-content {
-			overflow: hidden;
-			margin: 1em auto 0;
-			width: 90%;
-		}
+        .message-content {
+            overflow: hidden;
+            margin: 1em auto 0;
+            width: 90%;
+        }
 
-		img.avatar {
-			float: left;
-			margin: 0 $marg-sml 0 0;
-		}
+        img.avatar {
+            float: left;
+            margin: 0 $marg-sml 0 0;
+        }
 
-		.actions {
+        .actions {
 
-			a:before {
-				font-size: 18px;
-			}
-		}
-	} // close #bp-message-thread-list
+            a:before {
+                font-size: 18px;
+            }
+        }
+    } // close #bp-message-thread-list
 
-	form.send-reply {
+    form.send-reply {
 
-		.avatar-box {
-			padding: $pad-sml 0;
-		}
-	}
+        .avatar-box {
+            padding: $pad-sml 0;
+        }
+    }
 
-	// Grouped rules for both inbox all messages lists &
-	// for single view conversation thread
+    // Grouped rules for both inbox all messages lists &
+    // for single view conversation thread
 
-	.preview-pane-header,
-	.single-message-thread-header {
-		border-bottom: 1px solid $light-grey;
+    //.preview-pane-header,
+    .single-message-thread-header {
+        border-bottom: 1px solid $light-grey;
 
-		&:after {
-			clear: both;
-			content: "";
-			display: table;
-		}
-	}
+        &:after {
+            clear: both;
+            content: "";
+            display: table;
+        }
+    }
 
-	.preview-thread-title,
-	.single-thread-title {
+    //.preview-thread-title,
+    .single-thread-title {
 
-		@include font-size(16);
+        @include font-size(16);
 
-		.messages-title {
-			padding-left: $pad-lrg;
-		}
-	}
+        .messages-title {
+            padding-left: $pad-lrg;
+        }
+    }
 
-	.thread-participants {
-		float: left;
-		margin: $marg-xsml 0;
-		width: 70%;
+    .thread-participants {
+        float: left;
+        margin: $marg-xsml 0;
+        width: 70%;
 
-		dd,
-		ul {
-			margin-bottom: $marg-sml;
-		}
+        dd {
+            margin-bottom: $marg-sml;
+        }
 
-		ul {
-			list-style: none;
+        //ul {
+        //list-style: none;
 
-			&:after {
+        //&:after {
 
-				clear: both;
-				content: "";
-				display: table;
-			}
-		}
+        //clear: both;
+        //content: "";
+        //display: table;
+        //}
+        //}
 
-		li {
-			float: left;
-			margin-left: 5px;
-		}
+        li {
+            float: left;
+            margin-left: 5px;
+        }
 
-		img {
-			width: 30px;
-		}
-	}
+        img {
+            width: 30px;
+        }
+    }
 
-	#thread-preview .preview-message,
-	#bp-message-thread-list li .message-content {
+    #thread-preview .preview-message,
+    #bp-message-thread-list li .message-content {
 
-		ul,
-		ol,
-		blockquote {
-			list-style-position: inside;
-			margin-left: 0;
-		}
-	}
+        ul,
+        ol,
+        blockquote {
+            list-style-position: inside;
+            margin-left: 0;
+        }
+    }
 
-	ul#message-threads:empty,
-	#thread-preview:empty {
-		display: none;
-	}
+    ul#message-threads:empty {
+        display: none;
+    }
 
-	#thread-preview h2:first-child,
-	#bp-message-thread-header h2:first-child {
-		background-color: $light-grey;
-		color: $bp-text;
-		font-weight: 700;
-		margin: 0;
-		padding: 0.5em;
-	}
+    #thread-preview h2:first-child,
+        #bp-message-thread-header h2:first-child {
+        background-color: $light-grey;
+        color: $bp-text;
+        font-weight: 700;
+        margin: 0;
+        padding: 0.5em;
+    }
 
-	#message-threads .thread-content a,
-	#bp-message-thread-list li a.user-link {
-		border: 0;
-		text-decoration: none;
-	}
+    #message-threads .thread-content a {
+        border: 0;
+        text-decoration: none;
+    }
 
-	// The general form elements for composing messages
-	.standard-form {
+    // The general form elements for composing messages
+    .standard-form {
 
-		#subject {
-			margin-bottom: $marg-lrg;
-		}
-	}
+        #subject {
+            margin-bottom: $marg-lrg;
+        }
+    }
 
 } // close .bp-messages-content
 
@@ -401,8 +405,8 @@
 
 div.bp-navs#subsubnav.bp-messages-filters {
 
-	.user-messages-bulk-actions {
-		margin-right: 15px;
-		max-width: 42.5%;
-	}
+    .user-messages-bulk-actions {
+        margin-right: 15px;
+        max-width: 42.5%;
+    }
 }
