--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -124,21 +124,6 @@ body.buddypress .buddypress-wrap h6 {
   border-radius: 50%;
 }
 
-#buddypress div,
-#buddypress dl,
-#buddypress li,
-#buddypress textarea,
-#buddypress select,
-#buddypress input[type="search"],
-#buddypress input[type="submit"],
-#buddypress input[type="reset"] {
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  border-radius: 2px;
-  background-clip: padding-box;
-}
-
 body.buddypress article.page > .entry-header {
   margin-bottom: 2em;
   padding: 0;
@@ -395,7 +380,7 @@ body.buddypress article.page > .entry-header .entry-title {
 }
 
 .buddypress-wrap:not(.bp-single-vert-nav) .main-navs > ul > li > a {
-  padding: 0.5em calc(0.5em + 2px);
+  padding: 0.7em calc(0.5em + 2px);
 }
 
 .buddypress-wrap:not(.bp-single-vert-nav) .user-subnav#subsubnav,
@@ -597,7 +582,7 @@ body.buddypress article.page > .entry-header .entry-title {
     border-top-right-radius: 4px;
     border-width: 1px;
     margin-bottom: -1px;
-    padding: 0 0.5em 1px;
+    padding: 0 0.7em 1px;
   }
   .buddypress-wrap .tabbed-links ul li.current a,
   .buddypress-wrap .tabbed-links ol li.current a {
@@ -824,7 +809,7 @@ body.buddypress article.page > .entry-header .entry-title {
   float: left;
   font-size: small;
   margin: 0;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
   position: relative;
   width: 100%;
 }
@@ -876,7 +861,7 @@ body.buddypress article.page > .entry-header .entry-title {
   clear: both;
   list-style: none;
   margin: 20px 0;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
   width: 100%;
 }
 
@@ -897,7 +882,7 @@ body.buddypress article.page > .entry-header .entry-title {
 .bp-list li {
   list-style: none;
   margin: 10px 0;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
   position: relative;
 }
 
@@ -1237,7 +1222,7 @@ body.buddypress article.page > .entry-header .entry-title {
 *-----------------------------------------------------
 */
 .activity-list {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .activity-list .activity-item:before,
@@ -1506,7 +1491,7 @@ body.buddypress article.page > .entry-header .entry-title {
 .buddypress-wrap .activity-list .load-newest a {
   color: #555;
   display: block;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
 }
 
 .buddypress-wrap .activity-list .load-more a:focus, .buddypress-wrap .activity-list .load-more a:hover,
@@ -1559,7 +1544,7 @@ body.activity-permalink .activity-list .activity-content {
 
 body.activity-permalink .activity-list .activity-content .activity-header {
   margin: 0;
-  padding: 0.5em 0 0 0;
+  padding: 0.7em 0 0 0;
   text-align: center;
   width: 100%;
 }
@@ -1657,7 +1642,7 @@ body.activity-permalink .activity-list .activity-comments {
 .buddypress-wrap .activity-comments .acomment-content {
   border-left: 1px solid #ccc;
   margin: 15px 0 0 10%;
-  padding: 0.5em 1em;
+  padding: 0.7em 1em;
 }
 
 .buddypress-wrap .activity-comments .acomment-content p {
@@ -1692,7 +1677,7 @@ body.activity-permalink .activity-list .activity-comments {
 .buddypress-wrap .activity-comments .show-all button {
   font-size: 14px;
   text-decoration: underline;
-  padding-left: 0.5em;
+  padding-left: 0.7em;
 }
 
 .buddypress-wrap .activity-comments .show-all button span {
@@ -1714,7 +1699,7 @@ body.activity-permalink .activity-comments {
 }
 
 body.activity-permalink .activity-comments > ul {
-  padding: 0 0.5em 0 1em;
+  padding: 0 0.7em 0 1em;
 }
 
 body.activity-permalink .activity-comments ul li > ul {
@@ -1745,7 +1730,7 @@ form.ac-form .ac-reply-content a {
 
 form.ac-form .ac-reply-content .ac-textarea {
   margin-bottom: 15px;
-  padding: 0 0.5em;
+  padding: 0 0.7em;
   overflow: hidden;
 }
 
@@ -1976,7 +1961,7 @@ form.ac-form .ac-reply-content input {
 }
 
 .register-page .signup-form .editfield .field-visibility-settings {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .register-page .signup-form .editfield .field-visibility-settings fieldset {
@@ -2031,7 +2016,7 @@ form.ac-form .ac-reply-content input {
 *----------------------------------------------------------
 */
 #group-create-body {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 #group-create-body .creation-step-name {
@@ -2159,7 +2144,7 @@ form.ac-form .ac-reply-content input {
   color: #767676;
   font-size: 14px;
   margin: 15px 0 5px;
-  padding-bottom: 0.5em;
+  padding-bottom: 0.7em;
 }
 
 .single-headers ul {
@@ -2373,7 +2358,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 .buddypress-wrap.bp-single-vert-nav .bp-list:not(.grid) .item-entry {
-  padding-left: 0.5em;
+  padding-left: 0.7em;
 }
 
 /**
@@ -2402,7 +2387,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 .groups-manage-members-list {
-  padding: 0.5em 0;
+  padding: 0.7em 0;
 }
 
 .groups-manage-members-list dd {
@@ -2423,7 +2408,7 @@ body.no-js .single-item-header .js-self-profile-button {
 .groups-manage-members-list ul li {
   border-bottom: 1px solid #eee;
   margin-bottom: 10px;
-  padding: 0.5em 0.3em 0.3em;
+  padding: 0.7em 0.3em 0.3em;
 }
 
 .groups-manage-members-list ul li:only-child,
@@ -2643,8 +2628,8 @@ body.no-js .single-item-header .js-self-profile-button {
     box-sizing: border-box;
     border: 1px solid #eaeaea;
     float: left;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.7em;
+    padding-right: 0.7em;
     width: 49.5%;
   }
   .buddypress .bp-invites-content ul.item-list > li:nth-child(odd) {
@@ -2962,7 +2947,7 @@ body.register .buddypress-wrap .page ul {
   flex-flow: row nowrap;
   margin: 0;
   overflow: hidden;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 #message-threads li .thread-cb {
@@ -3069,7 +3054,7 @@ body.register .buddypress-wrap .page ul {
 .bp-messages-content .actions .bp-icons:not(.bp-hide) {
   display: inline-block;
   margin: 0;
-  padding: 0.3em 0.5em;
+  padding: 0.3em 0.7em;
 }
 
 .bp-messages-content .actions .bp-icons:not(.bp-hide):before {
@@ -3084,13 +3069,20 @@ body.register .buddypress-wrap .page ul {
   padding: 0 1em;
 }
 
+.bp-messages-content #bp-message-thread-list:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
 .bp-messages-content #bp-message-thread-list li {
   background: #fff;
   border: 1px solid #ccc;
   -webkit-box-shadow: -2px 1px 9px 0 #eee;
   -moz-box-shadow: -2px 1px 9px 0 #eee;
   box-shadow: -2px 1px 9px 0 #eee;
-  padding: 0.5em;
+  padding: 0.7em;
+  margin: 1em 0;
   width: 100%;
 }
 
@@ -3099,21 +3091,24 @@ body.register .buddypress-wrap .page ul {
 }
 
 .bp-messages-content #bp-message-thread-list .message-metadata .user-link {
-  display: block;
+  display: inline-block;
   font-size: 13px;
-  float: left;
 }
 
 @media screen and (min-width: 46.8em) {
   .bp-messages-content #bp-message-thread-list .message-metadata .user-link {
-    font-size: 16px;
+    font-size: 15px;
   }
+}
+
+.bp-messages-content #bp-message-thread-list .message-metadata .user-link strong {
+  font-weight: 600;
 }
 
 .bp-messages-content #bp-message-thread-list .message-metadata time {
   color: #737373;
   font-size: 12px;
-  padding: 0 0.5em;
+  padding: 0 0.7em;
 }
 
 .bp-messages-content #bp-message-thread-list .message-metadata button {
@@ -3121,13 +3116,23 @@ body.register .buddypress-wrap .page ul {
 }
 
 .bp-messages-content #bp-message-thread-list .message-metadata button:before {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .bp-messages-content #bp-message-thread-list .message-content {
+  clear: both;
+  font-size: 14px;
   overflow: hidden;
-  margin: 1em auto 0;
-  width: 90%;
+  margin: 0 auto;
+  padding-left: 40px;
+}
+
+.bp-messages-content #bp-message-thread-list .message-content p {
+  margin-bottom: 1em;
+}
+
+.bp-messages-content #bp-message-thread-list .message-content p:last-child {
+  margin-bottom: 0;
 }
 
 .bp-messages-content #bp-message-thread-list img.avatar {
@@ -3140,7 +3145,7 @@ body.register .buddypress-wrap .page ul {
 }
 
 .bp-messages-content form.send-reply .avatar-box {
-  padding: 0.5em 0;
+  padding: 0.7em 0;
 }
 
 .bp-messages-content .single-message-thread-header {
@@ -3304,7 +3309,7 @@ div.bp-navs#subsubnav.bp-messages-filters .user-messages-bulk-actions {
   border-radius: 0;
   font: inherit;
   font-size: 100%;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .buddypress-wrap .standard-form input[required],
@@ -3711,7 +3716,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap table.wp-profile-fields tr td,
 .buddypress-wrap table.forum tr th,
 .buddypress-wrap table.forum tr td {
-  padding: 0.5em;
+  padding: 0.7em;
   vertical-align: middle;
 }
 
@@ -3729,7 +3734,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .buddypress-wrap table.profile-fields .data {
-  padding: 0.5em 1em;
+  padding: 0.7em 1em;
 }
 
 .buddypress-wrap table.profile-fields tr:last-child {
@@ -3737,7 +3742,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .buddypress-wrap table.notifications td {
-  padding: 1em 0.5em;
+  padding: 1em 0.7em;
 }
 
 .buddypress-wrap table.notifications .bulk-select-all,
@@ -3896,7 +3901,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   font-size: inherit;
   font-weight: 400;
   outline: none;
-  padding: 0.3em 0.5em;
+  padding: 0.3em 0.7em;
   text-align: center;
   text-decoration: none;
   width: auto;
@@ -4183,7 +4188,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap .bp-messages .sitewide-notices {
   display: block;
   margin: 5px;
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .buddypress-wrap .bp-messages.info {
@@ -4257,11 +4262,11 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 .buddypress-wrap .bp-feedback .text {
   font-size: 14px;
   margin: 0;
-  padding: 0.5em 0;
+  padding: 0.7em 0;
 }
 
 .buddypress-wrap .bp-feedback.no-icon {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .buddypress-wrap .bp-feedback.small:before {
@@ -4368,7 +4373,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   display: none;
   font-weight: 700;
   margin: 10px 0 10px 0;
-  padding: 0.5em;
+  padding: 0.7em;
   text-align: center;
   width: auto;
 }
@@ -4405,7 +4410,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   background: #faa;
   color: #a00;
   margin: 0 0 10px 0;
-  padding: 0.5em;
+  padding: 0.7em;
   width: 90%;
 }
 
@@ -4421,7 +4426,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   font-size: 14px;
   left: 2%;
   position: absolute;
-  padding: 0.5em 1em;
+  padding: 0.7em 1em;
   right: 2%;
   top: 30px;
 }
@@ -4486,7 +4491,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .buddypress.widget ul.item-list li .item-avatar {
-  padding: 0.5em;
+  padding: 0.7em;
   text-align: center;
 }
 
@@ -4495,7 +4500,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .buddypress.widget ul.item-list li .item {
-  padding: 0 0.5em 0.5em;
+  padding: 0 0.7em 0.7em;
 }
 
 .buddypress.widget ul.item-list li .item .item-meta {
@@ -4768,12 +4773,12 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 }
 
 .grid > li .list-wrap .list-title {
-  padding: 0.5em;
+  padding: 0.7em;
 }
 
 .grid > li .list-wrap .update {
   color: #737373;
-  padding: 0.5em 2em;
+  padding: 0.7em 2em;
 }
 
 .grid > li .item-avatar {
@@ -5114,7 +5119,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
   }
   .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a {
     border-right: 1px solid #ccc;
-    padding: 0 0.5em;
+    padding: 0 0.7em;
   }
   .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a:focus,
   .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a:hover {
@@ -5268,6 +5273,10 @@ body.register #page #primary .entry-header {
 #message-threads li .thread-avatar img.avatar {
   float: left;
   margin: 5px 10px 0 0;
+}
+
+div#subsubnav:empty {
+  display: none;
 }
 
 #message-threads li .thread-avatar {
