Removed custom css and code cleanup.
#119 Messages > Formatting

--- a/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
@@ -49,7 +49,7 @@ $form-text:            $light-text-plus !default;
 $primary-headings:     $light-text !default;
 $textarea-bck:         $white !default;
 $meta-text:            $light-text-plus !default;
-$meta-text-dark:       $dark-grey !default;
+$meta-text-dark:       #222 !default;
 $focussed-border-clr:  rgba(31, 179, 221, 0.9) !default; // textareas? e.g whats-new
 
 // Message colors
