--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -149,6 +149,31 @@
 				}
 			}
 
+                        .activity-to {
+                                visibility: hidden;
+                                display: inline-block;
+                                white-space: nowrap;
+                                width: 1em;
+                        }
+
+                        .activity-to:before {
+                                font-family: dashicons;
+                                vertical-align: middle;
+                                content: "\f344";
+                                visibility: visible;
+
+                                @include medium-lrg-up() {
+                                        font-size: 15px;
+                                }
+                        }
+
+                        .activity-time-since:before {
+                                    content: "\00b7 ";
+                                    color: $light-text;
+                                    margin-right: 3px;
+                                    vertical-align: middle;
+                        }
+
 		} // close .activity-header
 
 		.activity-content {
